// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cart resolver case: addBook 1`] = `"My Book"`;

exports[`cart resolver case: addCategory 1`] = `
Object {
  "data": Object {
    "addCategory": Object {
      "id": "1",
      "name": "My Category",
    },
  },
}
`;

exports[`cart resolver case: addToCart 1`] = `"My Book"`;

exports[`cart resolver case: addToCartAgain 1`] = `
Array [
  [GraphQLError: Already in Cart],
]
`;

exports[`cart resolver case: addToCartLater 1`] = `
Object {
  "slug": "my-book",
  "title": "My Book",
}
`;

exports[`cart resolver case: addToCartQueryInvalidBook 1`] = `
Object {
  "data": Object {
    "addToCart": null,
  },
  "errors": Array [
    [GraphQLError: Item not found],
  ],
}
`;

exports[`cart resolver case: addToCartQueryInvalidBook 2`] = `
Object {
  "data": Object {
    "addToCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: emptyCartWLogin 1`] = `
Object {
  "data": Object {
    "emptyCart": null,
  },
  "errors": Array [
    [GraphQLError: Empty],
  ],
}
`;

exports[`cart resolver case: emptyCartWLoginLater 1`] = `
Object {
  "data": Object {
    "emptyCart": true,
  },
}
`;

exports[`cart resolver case: emptyCartWoLogin 1`] = `
Object {
  "data": Object {
    "emptyCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: getCart 1`] = `
Object {
  "data": Object {
    "getCart": Array [],
  },
}
`;

exports[`cart resolver case: getCartEmpty 1`] = `
Object {
  "data": Object {
    "getCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: removeFromCart 1`] = `
Object {
  "data": Object {
    "removeFromCart": true,
  },
}
`;

exports[`cart resolver case: removeWoLogin 1`] = `
Object {
  "data": Object {
    "removeFromCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: removeWoLogin 2`] = `
Object {
  "data": Object {
    "removeFromCart": null,
  },
  "errors": Array [
    [GraphQLError: Item not found],
  ],
}
`;
